--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -61,14 +61,18 @@ body {
     > div {
         display: table-cell;
         height: 100%;
-        overflow-x:hidden;
-        overflow-y: auto;
         vertical-align: top;
+        > div {
+            width:100%;
+            height:100%;
+            overflow-x:hidden;
+            overflow-y: auto;
+        }
         &#sidebar {
-            background:$gray-lighter;
             width: 250px;
         }
         &#stage {
+
         }
         &.handle {
             margin-left: -2px;
